--- a/main.html
+++ b/main.html
@@ -8,6 +8,19 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1>HTML Feedback Form</h1>
+	<form>
+		<label for="name">Name</label>
+		<input id="name" type="text" name="name">
+		<label for="portfolio">Portfolio</label>
+		<input id="portfolio" type="url" name="portfolio">
+		<label for="favColor">Favcolor</label>
+       <input type="color" id="favColor" name="favColor" value="#ff0000"><br><br>
+		<div class="slidecontainer">
+        <label for="likeness">Likeness</label>
+       <input type="range" min="1" max="100" value="50" id="likeness">
+
+	</form>
     <script type="text/javascript" src="./script.js">
 </script>
 
